<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/robo_icon"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/edit_btn"
        android:elevation="1dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"/>

    <EditText
        android:id="@+id/passwordEt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/emailEt"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/edit_btn"
        android:elevation="1dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"/>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/white"
        android:text="@string/register"
        android:layout_below="@id/passwordEt"
        android:background="@drawable/log_btn"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/have_accountTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_acc"
        android:textAlignment="center"
        android:layout_below="@id/registerBtn"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"/>
</RelativeLayout>